--- a/film.html
+++ b/film.html
@@ -497,7 +497,7 @@
   <main>
     <div class="container film-container">
       <div class="film-left">
-        <h1 class="film-title" id="filmTitle">Назва фільму</h1>
+        <h1 class="film-title" id="filmTitle" data-title=""></h1>
         <img id="filmPoster" src="" alt="Постер">
         <div class="film-meta">
           <span><b>Рік:</b> <span id="filmYear"></span></span>
@@ -816,7 +816,14 @@ if (String(data.pro_access || '').toUpperCase() === 'PRO') {
 
   // 🟢 Заповнення даних
   document.getElementById("filmPoster").src = data.poster || "";
-  document.getElementById("filmTitle").textContent = data.title || "";
+  // 🧩 Додаємо захист від ботів: назва з'являється лише через JS, а не в HTML одразу
+  const titleEl = document.getElementById("filmTitle");
+  if (titleEl && data.title) {
+    const encoded = btoa(unescape(encodeURIComponent(data.title))); // шифруємо в base64
+    titleEl.dataset.title = encoded;
+    titleEl.textContent = atob(encoded); // показуємо людям після розшифрування
+  }
+
   document.getElementById("filmDesc").textContent = data.description || "Опис відсутній";
   document.getElementById("filmYear").textContent = data.year || "";
   document.getElementById("filmGenre").textContent = data.genre || "";
@@ -1151,6 +1158,14 @@ async function loadRecommendedFilms(title, genre) {
       s.src = "footer.js";
       document.body.appendChild(s);
     });
+</script>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const el = document.querySelector("#filmTitle[data-title]");
+  if (el && el.dataset.title && !el.textContent.trim()) {
+    el.textContent = atob(el.dataset.title);
+  }
+});
 </script>
 
 
