--- a/header.html
+++ b/header.html
@@ -25,7 +25,7 @@
       <a href="/category.html?type=Фільм&genre=Мелодрама">Мелодрама</a>
       <a href="/category.html?type=Фільм&genre=Романтичні">Романтичні</a>
       <a href="/category.html?type=Фільм&genre=Містика">Містика</a>
-      <a href="/category.html?type=Фільм&genre=Музика">Музика</a>
+      <a href="/category.html?type=Фільм&genre=Музичні">Музичні</a>
       <a href="/category.html?type=Фільм&genre=Мюзикл">Мюзикл</a>
       <a href="/category.html?type=Фільм&genre=Пригоди">Пригоди</a>
       <a href="/category.html?type=Фільм&genre=Сімейний">Сімейний</a>
