--- a/index.html
+++ b/index.html
@@ -93,10 +93,7 @@
       <h2>Останні надходження</h2>
     </div>
     <div id="films-list" class="film-grid"></div>
-    <div class="block" style="margin-top:24px">
-      <h2>🧩 Нові серіали</h2>
-    </div>
-    <div id="series-list" class="film-grid"></div>
+    
 
     <div class="pagination">
       <button>«</button>
@@ -152,67 +149,63 @@
   const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 </script>
 <script>
-async function loadLatestFilms() {
+<script>
+let currentPage = 1;
+const filmsPerPage = 28; // 7 рядів × 4 картки в ряд
+
+async function loadLatestFilms(page = 1) {
   const container = document.getElementById("films-list");
   if (!container) return;
   container.innerHTML = "<p style='color:#aaa;'>Завантаження...</p>";
 
-  // 🔹 Беремо всі фільми, серіали, мультфільми, мультсеріали
   const { data, error } = await supabase
     .from("films_site")
     .select("id, title, poster, type, genre, year, imdb, pro_access")
     .in("type", ["Фільм", "Мультфільм", "Мультсеріал", "Серіал"])
     .order("id", { ascending: false })
-    .limit(100); // беремо більше, потім відфільтруємо
+    .limit(200); // беремо багато, щоб вистачило на кілька сторінок
 
   if (error) {
-    console.error("❌ Помилка завантаження останніх:", error);
+    console.error("❌ Помилка завантаження:", error);
     container.innerHTML = `<p style="color:white;">Помилка завантаження.</p>`;
     return;
   }
 
-  if (!data?.length) {
-    container.innerHTML = `<p style="color:white;">Поки що немає надходжень.</p>`;
-    return;
-  }
-
- // 🔹 Групуємо за title і мерджимо жанри (без дублювання назв)
-const map = new Map();
-data.forEach(item => {
-  const key = item.title.trim();
-  if (map.has(key)) {
-    const existing = map.get(key);
-
-    // ✅ Об’єднуємо жанри унікально
-    const genresOld = existing.genre ? existing.genre.split(",").map(g => g.trim()) : [];
-    const genresNew = item.genre ? item.genre.split(",").map(g => g.trim()) : [];
-    const allGenres = [...new Set([...genresOld, ...genresNew])];
-    existing.genre = allGenres.join(", ");
-
-    // ✅ Оновлюємо інші поля при потребі (беремо свіжіші)
-    if ((item.id || 0) > (existing.id || 0)) {
-      existing.id = item.id;
-      existing.poster = item.poster || existing.poster;
-      existing.type = item.type || existing.type;
-      existing.year = item.year || existing.year;
-      existing.imdb = item.imdb || existing.imdb;
-      existing.pro_access = item.pro_access || existing.pro_access;
+  // 🔹 Групуємо за назвою
+  const map = new Map();
+  data.forEach(item => {
+    const key = item.title.trim();
+    if (map.has(key)) {
+      const existing = map.get(key);
+      const genresOld = existing.genre ? existing.genre.split(",").map(g => g.trim()) : [];
+      const genresNew = item.genre ? item.genre.split(",").map(g => g.trim()) : [];
+      const allGenres = [...new Set([...genresOld, ...genresNew])];
+      existing.genre = allGenres.join(", ");
+      if ((item.id || 0) > (existing.id || 0)) {
+        existing.id = item.id;
+        existing.poster = item.poster || existing.poster;
+        existing.type = item.type || existing.type;
+        existing.year = item.year || existing.year;
+        existing.imdb = item.imdb || existing.imdb;
+        existing.pro_access = item.pro_access || existing.pro_access;
+      }
+    } else {
+      map.set(key, { ...item });
     }
-  } else {
-    map.set(key, { ...item });
-  }
-});
+  });
 
   const unique = Array.from(map.values());
-  
-  // 🔹 Беремо 20 останніх (після злиття)
-  const latest = unique
-    .sort((a, b) => (b.id || 0) - (a.id || 0))
-    .slice(0, 20);
+  const sorted = unique.sort((a, b) => (b.id || 0) - (a.id || 0));
 
+  // 🔹 Розрахунок пагінації
+  const totalPages = Math.ceil(sorted.length / filmsPerPage);
+  const start = (page - 1) * filmsPerPage;
+  const end = start + filmsPerPage;
+  const pageFilms = sorted.slice(start, end);
 
+  // 🔹 Вивід фільмів
   container.innerHTML = "";
-  latest.forEach(item => {
+  pageFilms.forEach(item => {
     const card = document.createElement("div");
     card.className = "film";
     card.innerHTML = `
@@ -220,7 +213,7 @@ data.forEach(item => {
         <img src="${item.poster || 'https://via.placeholder.com/200x300?text=No+Image'}" alt="${item.title || ''}">
         ${String(item.pro_access || '').toUpperCase() === 'PRO' ? '<span class="badge plus">PRO</span>' : ''}
       </div>
-      <div class="title">${item.title || ''}</div>
+      <div class="title">${item.title}</div>
       <div class="meta">
         <span>${item.type || ''}</span> • 
         <span>${item.genre || ''}</span> • 
@@ -229,7 +222,6 @@ data.forEach(item => {
       </div>
     `;
     card.addEventListener("click", () => {
-      // 🎬 якщо серіал — відкриваємо сторінку серіалу, якщо фільм — сторінку фільму
       if (item.type === "Серіал") {
         window.location.href = "series.html?title=" + encodeURIComponent(item.title);
       } else if (item.type === "Мультсеріал") {
@@ -240,8 +232,37 @@ data.forEach(item => {
     });
     container.appendChild(card);
   });
+
+  // 🔹 Пагінація
+  const pagination = document.querySelector(".pagination");
+  pagination.innerHTML = "";
+
+  const prevBtn = document.createElement("button");
+  prevBtn.textContent = "«";
+  prevBtn.disabled = page === 1;
+  prevBtn.onclick = () => { currentPage--; loadLatestFilms(currentPage); };
+  pagination.appendChild(prevBtn);
+
+  for (let i = 1; i <= totalPages; i++) {
+    const btn = document.createElement("button");
+    btn.textContent = i;
+    if (i === page) btn.classList.add("active");
+    btn.onclick = () => { currentPage = i; loadLatestFilms(i); };
+    pagination.appendChild(btn);
+  }
+
+  const nextBtn = document.createElement("button");
+  nextBtn.textContent = "»";
+  nextBtn.disabled = page === totalPages;
+  nextBtn.onclick = () => { currentPage++; loadLatestFilms(currentPage); };
+  pagination.appendChild(nextBtn);
 }
+
+document.addEventListener("DOMContentLoaded", () => {
+  loadLatestFilms();
+});
 </script>
+
 
 <script>
 async function loadLatestSeries() {
@@ -291,6 +312,7 @@ async function loadLatestSeries() {
 }
 
 </script>
+
 <script>
   // 🔥 Завантаження Топ-10 фільмів
   async function loadTopFilms() {
@@ -487,6 +509,7 @@ document.addEventListener("DOMContentLoaded", loadDynamicSidebar);
 
 </body>
 </html>
+
 
 
 
