--- a/collections.html
+++ b/collections.html
@@ -204,6 +204,6 @@ const collections = [
       document.body.appendChild(s);
     });
 
-
+<script src="/responsive.js"></script>
 </body>
 </html>
