--- a/film.html
+++ b/film.html
@@ -1183,6 +1183,6 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
-
+<script src="/responsive.js"></script>
 </body>
 </html>
