--- a/index.html
+++ b/index.html
@@ -505,10 +505,11 @@ document.addEventListener("DOMContentLoaded", loadDynamicSidebar);
 </script>
 
 
-
+<script src="/responsive.js"></script>
 
 </body>
 </html>
+
 
 
 
