--- a/multseries.html
+++ b/multseries.html
@@ -778,6 +778,6 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
-
+<script src="/responsive.js"></script>
 </body>
 </html>
