--- a/series.html
+++ b/series.html
@@ -760,6 +760,6 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
-
+<script src="/responsive.js"></script>
 </body>
 </html>
