--- a/header.html
+++ b/header.html
@@ -1,7 +1,12 @@
 <!-- === HEADER === -->
 <header>
   <div class="container topbar">
-    <nav class="main-nav">
+    <!-- Кнопка ☰ для мобільного -->
+    <span id="menuToggle" class="menu-toggle" aria-label="Відкрити меню">☰</span>
+  
+    <!-- Навігація -->
+    <nav id="mainNav" class="main-nav">
+
       <a href="/index.html">
         <img src="logo.png" alt="Relax Logo" class="nav-logo" />
       </a>
@@ -93,3 +98,4 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 });
 </script>
+<script src="/responsive.js"></script>
