--- a/index.html
+++ b/index.html
@@ -32,14 +32,20 @@
     });
   }
 
-  // 🟢 Завантаження хедера + підключення пошуку
-  fetch("header.html")
-    .then(res => res.text())
-    .then(html => {
-      document.getElementById("header-placeholder").innerHTML = html;
-      bindHeaderSearch(); // активуємо пошук після вставки
-    })
-    .catch(err => console.error("Помилка завантаження хедера:", err));
+ // 🟢 Завантаження хедера + підключення пошуку і бургера
+fetch("header.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("header-placeholder").innerHTML = html;
+    bindHeaderSearch(); // активуємо пошук після вставки
+
+    // 🟡 Додатково активуємо бургер-меню після вставки
+    if (typeof window.ensureToggleHandler === "function") {
+      window.ensureToggleHandler();
+    }
+  })
+  .catch(err => console.error("Помилка завантаження хедера:", err));
+
 </script>
 
 
@@ -509,6 +515,7 @@ document.addEventListener("DOMContentLoaded", loadDynamicSidebar);
 
 </body>
 </html>
+
 
 
 
