--- a/header.html
+++ b/header.html
@@ -1,6 +1,23 @@
 <!-- === HEADER === -->
 <header>
   <div class="container topbar">
+  <!-- 🟢 Кнопка бургер -->
+  <span id="menuToggle" class="menu-toggle" aria-label="Відкрити меню"
+  onclick="(function(){
+    var nav=document.querySelector('.main-nav');
+    if(!nav) return;
+    var opened=nav.classList.toggle('open');
+    var t=document.getElementById('menuToggle');
+    if(t){t.classList.toggle('active', opened);}
+  })();">☰</span>
+
+  <!-- 🔹 Далі твій логотип -->
+  <a href="/index.html" class="logo-link">
+    <img src="img/logo.png" alt="RelaxKino" class="logo">
+  </a>
+  <nav class="main-nav">
+
+  <div class="container topbar">
     <!-- Кнопка ☰ для мобільного -->
     <span id="menuToggle" class="menu-toggle" aria-label="Відкрити меню">☰</span>
   
