--- a/header.html
+++ b/header.html
@@ -12,7 +12,10 @@
         if(t){t.classList.toggle('active', opened);}
       })();">☰</span>
 
-  
+    <!-- 🟢 Логотип -->
+    <a href="/index.html" class="logo-link">
+      <img src="logo.png" alt="Logo">
+    </a>
 
     <!-- 🟢 ГОЛОВНЕ МЕНЮ -->
     <nav class="main-nav">
