--- a/header.html
+++ b/header.html
@@ -12,10 +12,12 @@
         if(t){t.classList.toggle('active', opened);}
       })();">☰</span>
 
-    <!-- 🟢 Логотип -->
-    <a href="/index.html" class="logo-link">
-      <img src="logo.png" alt="Logo">
-    </a>
+    <!-- 🟢 Головне меню з логотипом усередині -->
+    <nav class="main-nav">
+      <a href="/index.html">
+        <img src="logo.png" alt="Relax Logo" class="nav-logo" />
+      </a>
+      <a href="/index.html" class="active">Головна</a>
 
     <!-- 🟢 ГОЛОВНЕ МЕНЮ -->
     <nav class="main-nav">
