--- a/header.html
+++ b/header.html
@@ -14,14 +14,14 @@
 
     <!-- 🟢 Головне меню з логотипом усередині -->
     <nav class="main-nav">
+      <!-- ЛОГО -->
       <a href="/index.html">
         <img src="logo.png" alt="Relax Logo" class="nav-logo" />
       </a>
+
+      <!-- ГОЛОВНА -->
       <a href="/index.html" class="active">Головна</a>
 
-    <!-- 🟢 ГОЛОВНЕ МЕНЮ -->
-    <nav class="main-nav">
-      <a href="/index.html" class="active">Головна</a>
 <div class="dropdown">
   <a href="#" class="menu-films">Фільми</a>
   <div class="mega-menu">
