--- a/index.html
+++ b/index.html
@@ -32,16 +32,40 @@
     });
   }
 
- // 🟢 Завантаження хедера + підключення пошуку і бургера
-fetch("header.html")
-  .then(res => res.text())
-  .then(html => {
-    document.getElementById("header-placeholder").innerHTML = html;
-    bindHeaderSearch();
-    if (window.innerWidth <= 980) document.body.classList.add("mobile");
-  })
-  .catch(err => console.error("Помилка завантаження хедера:", err));
+  // 🟢 Завантаження хедера + підключення пошуку, бургера та мобільного мега-меню
+  fetch("header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("header-placeholder").innerHTML = html;
+      bindHeaderSearch();
+      if (window.innerWidth <= 980) document.body.classList.add("mobile");
 
+      // 🟣 Активуємо мега-меню для мобільних
+      if (window.innerWidth <= 980) {
+        document.querySelectorAll(".dropdown > a").forEach(link => {
+          link.addEventListener("click", (e) => {
+            e.preventDefault();
+            const parent = link.parentElement;
+            const menu = parent.querySelector(".mega-menu, .mega-series, .mega-cartoons");
+            if (!menu) return;
+
+            // ховаємо інші меню
+            document.querySelectorAll(".mega-menu, .mega-series, .mega-cartoons").forEach(m => {
+              if (m !== menu) m.style.display = "none";
+            });
+
+            // показуємо/ховаємо потрібне
+            if (menu.style.display === "block") {
+              menu.style.display = "none";
+            } else {
+              menu.style.display = "block";
+              menu.scrollLeft = 0;
+            }
+          });
+        });
+      }
+    })
+    .catch(err => console.error("Помилка завантаження хедера:", err));
 </script>
 
 
@@ -511,6 +535,7 @@ document.addEventListener("DOMContentLoaded", loadDynamicSidebar);
 
 </body>
 </html>
+
 
 
 
