--- a/header.html
+++ b/header.html
@@ -1,27 +1,13 @@
 <!-- === HEADER === -->
 <header>
   <div class="container topbar">
-
-    <!-- 🟢 Кнопка бургер -->
-    <span id="menuToggle" class="menu-toggle" aria-label="Відкрити меню"
-      onclick="(function(){
-        var nav=document.querySelector('.main-nav');
-        if(!nav) return;
-        var opened=nav.classList.toggle('open');
-        var t=document.getElementById('menuToggle');
-        if(t){t.classList.toggle('active', opened);}
-      })();">☰</span>
-
-    <!-- 🟢 Головне меню з логотипом усередині -->
     <nav class="main-nav">
-      <!-- ЛОГО -->
       <a href="/index.html">
         <img src="logo.png" alt="Relax Logo" class="nav-logo" />
       </a>
-
-      <!-- ГОЛОВНА -->
       <a href="/index.html" class="active">Головна</a>
 
+<!-- === МЕНЮ ФІЛЬМИ === -->
 <div class="dropdown">
   <a href="#" class="menu-films">Фільми</a>
   <div class="mega-menu">
@@ -87,36 +73,6 @@
   <a href="/profile.html" class="profile-btn">👑 Мій кабінет</a>
 </div>
 </div>
-
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  // 🟣 Для мобільних — відкривати мега-меню по кліку
-  if (window.innerWidth <= 980) {
-    document.querySelectorAll(".dropdown > a").forEach(link => {
-      link.addEventListener("click", e => {
-        e.preventDefault();
-        const parent = link.parentElement;
-        const menu = parent.querySelector(".mega-menu, .mega-series, .mega-cartoons");
-        if (!menu) return;
-
-        // Закриваємо всі інші меню перед відкриттям
-        document.querySelectorAll(".mega-menu, .mega-series, .mega-cartoons").forEach(m => {
-          if (m !== menu) m.style.display = "none";
-        });
-
-        // Перемикаємо відображення
-        if (menu.style.display === "block") {
-          menu.style.display = "none";
-        } else {
-          menu.style.display = "block";
-          menu.scrollLeft = 0; // прокрутка вліво при відкритті
-        }
-      });
-    });
-  }
-});
-</script>
-
 </header>
 <script>
 document.addEventListener("DOMContentLoaded", () => {
@@ -137,13 +93,3 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 });
 </script>
-<script>
-  // ⏳ Коли хедер завантажився — активуємо бургер
-  document.addEventListener("DOMContentLoaded", () => {
-    if (typeof window.ensureToggleHandler === "function") {
-      window.ensureToggleHandler(); // активує кнопку ☰
-    }
-  });
-</script>
-
-<script src="/responsive.js"></script>
