--- a/header.html
+++ b/header.html
@@ -47,6 +47,7 @@
       <a href="/category.html?type=Серіал&genre=Мелодраматичні">Мелодраматичні</a>
       <a href="/category.html?type=Серіал&genre=Детективні">Детективні</a>
       <a href="/category.html?type=Серіал&genre=Драматичні">Драматичні</a>
+      <a href="/category.html?type=Серіал&genre=Кримінальні">Кримінальні</a>
       <a href="/category.html?type=Серіал&genre=Комедійні">Комедійні</a>
       <a href="/category.html?type=Серіал&genre=Історичні">Історичні</a>
       <a href="/category.html?type=Серіал&genre=Фантастичні">Фантастичні</a>
